--- a/package.json
+++ b/package.json
@@ -51,6 +51,18 @@
     "style-loader": "^0.21.0",
     "svg-inline-loader": "^0.8.0",
     "webpack": "^4.6.0",
-    "webpack-cli": "^2.1.2"
+    "webpack-cli": "^2.1.2",
+    "@babel/core": "^7.0.0-beta.46",
+    "@babel/preset-env": "^7.0.0-beta.46",
+    "babel-loader": "^8.0.0-beta",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3",
+    "helmet": "^3.12.0",
+    "live-server": "^1.2.0",
+    "node-sass": "^4.9.0",
+    "npm-run-all": "^4.1.2",
+    "npx": "^10.2.0",
+    "path": "^0.12.7",
+    "postcss": "^6.0.22"
   }
 }
