--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
   "author": "Jason McLaren",
   "license": "MIT",
   "scripts": {
+    "push:all" : "git push && git push heroku master",
     "purge:idea": "rm -r .idea",
     "watch:js": "npx babel --no-babelrc js/script.precomp.js --presets=es2015 --plugins transform-object-rest-spread  --out-file js/script.js --source-maps --watch",
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
     "devserver": "live-server --browser='Google Chrome'",
     "start:local": "npm-run-all --parallel devserver watch:sass watch:js",
+    "build": "npm-run-all build:css compile:js",
+    "heroku-postbuild": "yarn build",
     "start": "node server/server.js",
     "start:development": "nodemon server/server.js",
-    "compile:js": "npx babel --no-babelrc js/script.precomp.js --presets=es2015 --plugins transform-object-rest-spread  --out-file js/script.js",
-    "webpack": "webpack",
+    "compile:js": "npx babel --no-babelrc js/script.precomp.js --presets=babili  --out-file js/script.js",
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
-    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.comp.css -o css/style.prefix.css",
-    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
+    "prefix:css": "node-sass --use autoprefixer -b 'last 10 versions' css/style.comp.css css/prefixed.css",
+    "compress:css": "node-sass --output-style compressed css/prefixed.css css/style.css",
     "build:css": "npm-run-all compile:sass prefix:css compress:css"
   },
   "dependencies": {
@@ -42,6 +44,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-babili": "^0.1.4",
     "babel-preset-flow": "^6.23.0",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -50,18 +53,6 @@
     "style-loader": "^0.21.0",
     "svg-inline-loader": "^0.8.0",
     "webpack": "^4.6.0",
-    "webpack-cli": "^2.1.2",
-    "@babel/core": "^7.0.0-beta.46",
-    "@babel/preset-env": "^7.0.0-beta.46",
-    "babel-loader": "^8.0.0-beta",
-    "dotenv": "^5.0.1",
-    "express": "^4.16.3",
-    "helmet": "^3.12.0",
-    "live-server": "^1.2.0",
-    "node-sass": "^4.9.0",
-    "npm-run-all": "^4.1.2",
-    "npx": "^10.2.0",
-    "path": "^0.12.7",
-    "postcss": "^6.0.22"
+    "webpack-cli": "^2.1.2"
   }
 }
